# paquete_optimizacion

./: LICENSE  README.md  pyproject.toml
funciones_prueba/: func_objetivo.py
metodos_func_multivarible/metd_directos/: hooke_jeeves.py  nelder.py  random_walk.py  simplex_search.py
metodos_func_multivarible/metd_gradiente/: gradiente_conjugado.py  metodo_cauchy.py  metodo_newton.py
metodos_func_univaraiable/metd_derivada/: bisecccion_metod.py  met_newton_raphson.py  secante_met.py
metodos_func_univaraiable/metd_eliminacion_region/: fibonacci_method.py  golden_section.py  interval_halving.py
src/Prototipo_Paquete_Optimizacion_byZamm079.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/funciones_prueba/: func_objetivo.py
src/metodos_func_multivarible/: metodos_directos.py  metodos_gradiente.py
src/metodos_func_univaraiable/: metodos_basado_derivada.py  metodos_elim_regiones.py
